@@ -10058,6 +10058,11 @@ XMLBasicPanel.SimplePanelTextHeight=20</programlisting>
           <para>Updated TRR to version 1.3-1</para>
         </listitem>
 
+        <listitem>
+          <para>Installation fixed so now TWE configuration can be switched
+          ("Default", "Loop activity sample", "Shark") no matter how User
+          Access Controls (UAC) are configured on Windows machine</para>
+        </listitem>
       </itemizedlist>
     </section>
 
